# chatting

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.real.yml  pyproject.toml
app/: bootstrap.py  main.py
app/adapters/outbound/: gptsovits_client_stub.py  gptsovits_http_client.py  inmemory_rate_limiter.py  vllm_client_stub.py  (+5 more)
app/mock_servers/: gptsovits_mock.py  vllm_mock.py
deploy/migrations/: 0001_create_chat_session_tables.sql
docs/: API_SPEC.md  CONVENTION.md  RETRY_POLICY.md  RUNBOOK.md  STREAMING.md  TASK_WORKFLOW.md
docs/tasks/: EXECUTION_ORDER.md  TASK-20260317-chat-p0-bootstrap.md  TASK-20260317-chat-p1-lifespan-and-real-adapters.md  TASK-P0-01-bootstrap.md  TASK-P1-01-lifespan-and-real-adapters.md  TASK-P2-01-real-spec-and-operational-readiness.md  TASK-P2-02-readiness-observability-hardening.md  TASK-P2-03-postgres-session-store.md  TASK-P2-04-error-policy-retry-tuning.md  TASK-P2-99-merged-real-contract-vllm-gptsovits.md  TASK-P3-01-kafka-async-chat-pipeline.md  TASK-P3-02-streaming-response.md  TASK-P3-03-auth-rate-limit-multitenancy.md  TASK-P3-04-deploy-k8s-runbook.md  TASK-P3-05-load-failover-validation.md  TASK_TEMPLATE.md
env/: .env.example  .env.real.example
scripts/: run_real_stack.sh  smoke_real_stack.sh  smoke_with_mock_providers.sh
tests/integration/: test_auth_rate_limit.py  test_chat_api.py  test_chat_stream_api.py  test_health_ready_metrics.py
tests/unit/: test_bootstrap_wiring.py  test_chat_service.py  test_logging_formatter.py  test_postgres_session_repository.py  test_provider_adapters.py  test_retry_policy.py
(+18 files in other folders)
